care/force-app/main/default/objects/Flag__c/Flag__c.object-meta.xml
<CustomObject>
    <description>This object is created when one member accuses another member of a safety infraction. This flag is created to track the accusing member and keep a related list in that member&apos;s contact file so that we can easily detect if someone if &quot;over&quot; flagging another member.</description>
    <label>Flag</label>
    <nameField>
        <displayFormat>Flag-{000000}</displayFormat>
        <label>Flag ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>