care/force-app/main/default/objects/Flag__c/fields/Black_List_Case__c.field-meta.xml
<CustomField>
    <fullName>Black_List_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Blocklist flag match generates more then one safety case for one member</description>
    <inlineHelpText>Please choose the Safety alert case</inlineHelpText>
    <label>Block List Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Blocklist Flags</relationshipLabel>
    <relationshipName>Flags</relationshipName>
    <type>Lookup</type>
</CustomField>