care/force-app/main/default/objects/Flag__c/fields/Flagger__c.field-meta.xml
<CustomField>
    <fullName>Flagger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the accusing member or &quot;flagging&quot; member who created a &quot;flag&quot; against another member.</description>
    <label>Flagger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Flags</relationshipLabel>
    <relationshipName>Flags</relationshipName>
    <type>Lookup</type>
</CustomField>