care/force-app/main/default/objects/Flag__c/listViews/Recent_Flags.listView-meta.xml
<ListView>
    <fullName>Recent_Flags</fullName>
    <columns>NAME</columns>
    <columns>Content_Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Flagger__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <label>Recent Flags</label>
    <language>en_US</language>
</ListView>